--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		
 			<div class="navbar">
 				<div class="logo">
-					<img src="images/logo.png" width="125px">
+					<img src="Images/logo.png" width="125px">
 				</div>
 				<nav>
 					<ul id="MenuItems">
