--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<nav>
 					<ul id="MenuItems">
 						<li><a href="">Home</a></li>
-						<li><a href="file:///C:/Users/danie/OneDrive/Desktop/Taym/Website/products.html">Products</a></li>
+						<li><a href="https://github.com/danielpulido01/primeraPagina/blob/main/products.html">Products</a></li>
 						<li><a href="">About</a></li>
 						<li><a href="">Social</a></li>
 						<li><a href="">Account</a></li>
@@ -321,7 +321,44 @@
 		</div>
 	</div>
 	<!-------------footer------------->
-	<!--#include file="include_head.html" -->
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="footer-col-1">
+					<h3>Download Our App</h3>
+					<p>Download App for Android and IOs mobile phone</p>
+					<div class="app-logo">
+						<img src="images/play-store.png">
+						<img src="images/app-store.png">
+					</div>
+				</div>
+				<div class="footer-col-2">
+					<img src="images/logo-white.png">
+					<p>Our purpose is to sustainably hablada de paja xxxx gola soy daniel</p>
+				</div>
+				<div class="footer-col-3">
+					<h3>Useful Links</h3>
+					<ul>
+						<li>Coupons</li>
+						<li>Blog Post</li>
+						<li>Return Policy</li>
+						<li>Join Affiliate</li>
+					</ul>
+				</div>
+				<div class="footer-col-4">
+					<h3>Follow us</h3>
+					<ul>
+						<li>Instagram</li>
+						<li>TikTok</li>
+						<li>Twitter</li>
+						<li>Facebook</li>
+					</ul>
+				</div>
+			</div>
+			<hr>
+			<p class="copyright">Copyright 2020 - TaymStore</p>
+		</div>
+	</div>
 	
 	<!Toggle menu>
 	<script>
