--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 				<nav>
 					<ul id="MenuItems">
 						<li><a href="">Home</a></li>
-						<li><a href="https://github.com/danielpulido01/primeraPagina/blob/main/products.html">Products</a></li>
+						<li><a href="products.html">Products</a></li>
 						<li><a href="">About</a></li>
 						<li><a href="">Social</a></li>
 						<li><a href="">Account</a></li>
 					</ul>
 				</nav>
-				<img src="images/cart.png" width="30px" height="30px">
-				<img src="images/menu.png" class="menu-icon">
+				<img src="Images/cart.png" width="30px" height="30px">
+				<img src="Images/menu.png" class="menu-icon">
 			</div>
 			
 			<div class="row">
