--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 				<nav>
 					<ul id="MenuItems">
 						<li><a href="">Home</a></li>
-						<li><a href="products.html">Products</a></li>
+						<li><a href="https://danielpulido01.github.io/primeraPagina/products.html">Products</a></li>
 						<li><a href="">About</a></li>
 						<li><a href="">Social</a></li>
 						<li><a href="">Account</a></li>
 					</ul>
 				</nav>
-				<img src="Images/cart.png" width="30px" height="30px">
-				<img src="Images/menu.png" class="menu-icon">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/cart.png" width="30px" height="30px">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/menu.png" class="menu-icon">
 			</div>
 			
 			<div class="row">
@@ -50,7 +50,7 @@
 					<a href="" class="btn">Explore Now &#8594;</a>
 				</div>
 				<div class="col-2">
-					<img src="images/image1.png" alt="">
+					<img src="https://danielpulido01.github.io/primeraPagina/Images/image1.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -62,10 +62,10 @@
 		<div class="small-container">
 			<div class="row">
 				<div class="col-3">
-					<img src="images/category-1.jpg" alt="">
+					<img src="https://danielpulido01.github.io/primeraPagina/Images/category-1.jpg" alt="">
 				</div>
 				<div class="col-3">
-					<img src="images/category-2.jpg" alt="">
+					<img src="https://danielpulido01.github.io/primeraPagina/Images/category-2.jpg" alt="">
 				</div>
 				<div class="col-3">
 					<img src="images/category-3.jpg" alt="">
