--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-
 	scale=1.0">
 	<title>TaymStore</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://danielpulido01.github.io/primeraPagina/style.css">
 	
 	<!Para linkearle fuentes para escribir>
 	<link href="https://fonts.googleapis.com/css2?
