--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			
 			<div class="row">
 				<div class="col-2">
-					<h1>Titulo de la pagina<br>Algo motivador</h1>
+					<h1>Titulo de la p1gina<br>Algo motivador</h1>
 					<p>Parrafo pequeño que quede bonito<br>Algo motivador puede ser mas largo
 					<br>y continuando lo anterior, unas <br> 3 lineas se ve decente</p>
 					<!Luego de lo que se quiere poner en el boton, se pone el codigo del boton para como quieres que se vea. Este codigo le agrega una flecha>
