--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<img src="https://danielpulido01.github.io/primeraPagina/Images/category-2.jpg" alt="">
 				</div>
 				<div class="col-3">
-					<img src="images/category-3.jpg" alt="">
+					<img src="https://danielpulido01.github.io/primeraPagina/Images/category-3.jpg" alt="">
 				</div>
 			</div>
 		</div>
@@ -79,8 +79,8 @@
 		<h2 class="title">Featured Products</h2>
 		<div class="row">
 			<div class="col-4">
-				<img src="images/product-1.jpg" alt="" onClick=
-				"window.location.href = 'file:///C:/Users/danie/OneDrive/Desktop/Taym/Website/product-details.html'">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-1.jpg" alt="" onClick=
+				"window.location.href = 'https://danielpulido01.github.io/primeraPagina/product-details.html'">
 				<h4>Nave principal</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -96,7 +96,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-2.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-2.jpg" alt="">
 				<h4>Nave cara</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -112,7 +112,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-3.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-3.jpg" alt="">
 				<h4>Nave media</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -128,7 +128,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-4.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-4.jpg" alt="">
 				<h4>Nave barata</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -148,7 +148,7 @@
 		<h2 class="title">Latest Products</h2>
 		<div class="row">
 			<div class="col-4">
-				<img src="images/product-5.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-5.jpg" alt="">
 				<h4>Hoyo principal</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -164,7 +164,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-6.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-6.jpg" alt="">
 				<h4>Hoyo cara</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -180,7 +180,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-7.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-7.jpg" alt="">
 				<h4>Hoyo media</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -196,7 +196,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-8.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-8.jpg" alt="">
 				<h4>Hoyo barata</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -213,7 +213,7 @@
 		</div>
 		<div class="row">
 			<div class="col-4">
-				<img src="images/product-9.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-9.jpg" alt="">
 				<h4>Hoyo principal</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -229,7 +229,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-10.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-10.jpg" alt="">
 				<h4>Hoyo cara</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -245,7 +245,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-11.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-11.jpg" alt="">
 				<h4>Hoyo media</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -261,7 +261,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-12.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-12.jpg" alt="">
 				<h4>Hoyo barata</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -284,7 +284,7 @@
 		<div class="small-container">
 			<div class="row">
 				<div class="col-2">
-					<img src="images/exclusive.png" class="offer-img">
+					<img src="https://danielpulido01.github.io/primeraPagina/Images/exclusive.png" class="offer-img">
 				</div>
 				<div class="col-2">
 					<p>Exclusively Available on TaymStore</p>
@@ -303,19 +303,19 @@
 		<div class="small-container">
 			<div class="row">
 				<div class="col-5">
-					<img src="images/logo-godrej.png">
+					<img src="https://danielpulido01.github.io/primeraPagina/Images/logo-godrej.png">
 				</div>
 				<div class="col-5">
-					<img src="images/logo-oppo.png">
+					<img src="https://danielpulido01.github.io/primeraPagina/Images/logo-oppo.png">
 				</div>
 				<div class="col-5">
-					<img src="images/logo-coca-cola.png">
+					<img src="https://danielpulido01.github.io/primeraPagina/Images/logo-coca-cola.png">
 				</div>
 				<div class="col-5">
-					<img src="images/logo-paypal.png">
+					<img src="https://danielpulido01.github.io/primeraPagina/Images/logo-paypal.png">
 				</div>
 				<div class="col-5">
-					<img src="images/logo-philips.png">
+					<img src="https://danielpulido01.github.io/primeraPagina/Images/logo-philips.png">
 				</div>
 			</div>
 		</div>
@@ -328,12 +328,12 @@
 					<h3>Download Our App</h3>
 					<p>Download App for Android and IOs mobile phone</p>
 					<div class="app-logo">
-						<img src="images/play-store.png">
-						<img src="images/app-store.png">
+						<img src="https://danielpulido01.github.io/primeraPagina/Images/play-store.png">
+						<img src="https://danielpulido01.github.io/primeraPagina/Images/app-store.png">
 					</div>
 				</div>
 				<div class="footer-col-2">
-					<img src="images/logo-white.png">
+					<img src="https://danielpulido01.github.io/primeraPagina/Images/logo-white.png">
 					<p>Our purpose is to sustainably hablada de paja xxxx gola soy daniel</p>
 				</div>
 				<div class="footer-col-3">
