prueba para include header

--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 		Branding
 	<div>
 	<div style="float: right">
-		<a href="index.html">Home</a>
-		<A HREF="About.html">About</a>
+		<a href="https://danielpulido01.github.io/primeraPagina/index.html">Home</a>
+		<A HREF="https://danielpulido01.github.io/primeraPagina/About.html">About</a>
 	</div>
 </div>
