--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 	</script>
 	<script>
 		$(function(){
-			$('#header').load('header.html');
+			$('#header').load('https://danielpulido01.github.io/primeraPagina/header.html');
 		})
 	</script>
 </head>
