prueba con footer

--- a/index.html
+++ b/index.html
@@ -321,44 +321,16 @@
 		</div>
 	</div>
 	<!-------------footer------------->
-	<div class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="footer-col-1">
-					<h3>Download Our App</h3>
-					<p>Download App for Android and IOs mobile phone</p>
-					<div class="app-logo">
-						<img src="https://danielpulido01.github.io/primeraPagina/Images/play-store.png">
-						<img src="https://danielpulido01.github.io/primeraPagina/Images/app-store.png">
-					</div>
-				</div>
-				<div class="footer-col-2">
-					<img src="https://danielpulido01.github.io/primeraPagina/Images/logo-white.png">
-					<p>Our purpose is to sustainably hablada de paja xxxx gola soy daniel</p>
-				</div>
-				<div class="footer-col-3">
-					<h3>Useful Links</h3>
-					<ul>
-						<li>Coupons</li>
-						<li>Blog Post</li>
-						<li>Return Policy</li>
-						<li>Join Affiliate</li>
-					</ul>
-				</div>
-				<div class="footer-col-4">
-					<h3>Follow us</h3>
-					<ul>
-						<li>Instagram</li>
-						<li>TikTok</li>
-						<li>Twitter</li>
-						<li>Facebook</li>
-					</ul>
-				</div>
-			</div>
-			<hr>
-			<p class="copyright">Copyright 2020 - TaymStore</p>
-		</div>
-	</div>
+	<script
+	  src="https://code.jquery.com/jquery-3.6.0.min.js"
+	  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+	  crossorigin="anonymous">
+	</script>
+	<script>
+		$(function(){
+			$('#header').load('https://danielpulido01.github.io/primeraPagina/header.html');
+		})
+	</script>
 	
 	<!Toggle menu>
 	<script>
