--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 	</script>
 	<script>
 		$(function(){
-			$('#header').load('https://danielpulido01.github.io/primeraPagina/header.html');
+			$('#footer').load('https://danielpulido01.github.io/primeraPagina/footer.html');
 		})
 	</script>
 	
