--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 	<!Para linkearle los iconos de estrellas del rating>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-
 	awesome/4.7.0/css/font-awesome.min.css">
+	
+	<script
+	  src="https://code.jquery.com/jquery-3.6.0.min.js"
+	  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+	  crossorigin="anonymous">
+	</script>
+	
+	<script>
+		$(function(){
+			$('#footer').load('https://danielpulido01.github.io/primeraPagina/footer.html');
+		})
+	</script>
 </head>
 
 <body>
@@ -321,16 +333,7 @@
 		</div>
 	</div>
 	<!-------------footer------------->
-	<script
-	  src="https://code.jquery.com/jquery-3.6.0.min.js"
-	  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-	  crossorigin="anonymous">
-	</script>
-	<script>
-		$(function(){
-			$('#footer').load('https://danielpulido01.github.io/primeraPagina/footer.html');
-		})
-	</script>
+	<div id="footer"></div>
 	
 	<!Toggle menu>
 	<script>
