--- a/index.html
+++ b/index.html
@@ -2,32 +2,10 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-
-	scale=1.0">
-	<title>TaymStore</title>
-	<link rel="stylesheet" href="https://danielpulido01.github.io/primeraPagina/style.css">
-	
-	<!Para linkearle fuentes para escribir>
-	<link href="https://fonts.googleapis.com/css2?
-	family=Poppins:wght@300;400;500;600;700&display=swap"
-	rel="stylesheet">
-	
-	<!Para linkearle los iconos de estrellas del rating>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-
-	awesome/4.7.0/css/font-awesome.min.css">
-	
-	<script
-	  src="https://code.jquery.com/jquery-3.6.0.min.js"
-	  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-	  crossorigin="anonymous">
-	</script>
-	
-	<script>
-		$(function(){
-			$('#footer').load('https://danielpulido01.github.io/primeraPagina/footer.html');
-		})
-	</script>
+	<script type="text/javascript" src="js/lib/jquery-1.11.1.min.js" ></script>
+   <script>
+       $(function(){ $("head").load("https://danielpulido01.github.io/primeraPagina/head.html") });
+   </script>
 </head>
 
 <body>
