--- a/head.html
+++ b/head.html
@@ -20,6 +20,12 @@ awesome/4.7.0/css/font-awesome.min.css">
 	
 <script>
 	$(function(){
+		$('#header').load('https://danielpulido01.github.io/primeraPagina/header.html');
+	})
+</script>
+
+<script>
+	$(function(){
 		$('#footer').load('https://danielpulido01.github.io/primeraPagina/footer.html');
 	})
 </script>
