--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 				<nav>
 					<ul id="MenuItems">
-						<li><a href="">Hama</a></li>
+						<li><a href="">Homa</a></li>
 						<li><a href="https://danielpulido01.github.io/primeraPagina/products.html">Products</a></li>
 						<li><a href="">About</a></li>
 						<li><a href="">Social</a></li>
