--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,8 @@
 				<div class="footer-col-4">
 					<h3>Follow us</h3>
 					<ul>
-						<li>Instagram</li>
+						<li><a href="https://www.instagram.com/taym.cr/" target="_blank">
+							Instagram</a></li>
 						<li>TikTok</li>
 						<li>Twitter</li>
 						<li>Facebook</li>
