--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
 		$(function(){
 			$('#footer').load('https://danielpulido01.github.io/primeraPagina/footer.html');
 		})
+		
+		$(function(){
+			$('#headerBar').load('https://danielpulido01.github.io/primeraPagina/header.html');
+		})
 	</script>
+	
+	
 </head>
 
 <body>
@@ -36,22 +42,7 @@
 
 		<div class="container">
 		
-			<div class="navbar">
-				<div class="logo">
-					<img src="Images/logo.png" width="125px">
-				</div>
-				<nav>
-					<ul id="MenuItems">
-						<li><a href="">Homa</a></li>
-						<li><a href="https://danielpulido01.github.io/primeraPagina/products.html">Products</a></li>
-						<li><a href="">About</a></li>
-						<li><a href="">Social</a></li>
-						<li><a href="">Account</a></li>
-					</ul>
-				</nav>
-				<img src="https://danielpulido01.github.io/primeraPagina/Images/cart.png" width="30px" height="30px">
-				<img src="https://danielpulido01.github.io/primeraPagina/Images/menu.png" class="menu-icon">
-			</div>
+			<div id="headerBar"></div>
 			
 			<div class="row">
 				<div class="col-2">
