--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
 				</div>
 				<nav>
 					<ul id="MenuItems">
-						<li><a href="">Homa</a></li>
+						<li><a href="">Homo</a></li>
 						<li><a href="https://danielpulido01.github.io/primeraPagina/products.html">Products</a></li>
 						<li><a href="">About</a></li>
 						<li><a href="">Social</a></li>
@@ -12,5 +12,22 @@
 					</ul>
 				</nav>
 				<img src="https://danielpulido01.github.io/primeraPagina/Images/cart.png" width="30px" height="30px">
-				<img src="https://danielpulido01.github.io/primeraPagina/Images/menu.png" class="menu-icon">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/menu.png" 
+				class="menu-icon" onclick="menutogle()">
 </div>
+
+<!Toggle menu>
+<script>
+		var MenuItems = document.getElementById("MenuItems");
+		
+		MenuItems.style.maxHeight = "0px";
+		
+		function menutoggle(){
+			if(MenuItems.style.maxHeight == "0px"){
+				MenuItems.style.maxHeight = "200px"
+			}
+			else{
+				MenuItems.style.maxHeight = "0px"
+			}
+		}		
+</script>
