--- a/footer.html
+++ b/footer.html
@@ -19,7 +19,7 @@
 						<li>Coupons</li>
 						<li>Blog Post</li>
 						<li>Return Policy</li>
-						<li>Join Affiliate</li>
+						<li>Join Apiliate</li>
 					</ul>
 				</div>
 				<div class="footer-col-4">
