--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
 				</div>
 				<nav>
 					<ul id="MenuItems">
-						<li><a href="">Homo</a></li>
+						<li><a href="https://danielpulido01.github.io/primeraPagina/index.html">Homo</a></li>
 						<li><a href="https://danielpulido01.github.io/primeraPagina/products.html">Products</a></li>
 						<li><a href="">About</a></li>
 						<li><a href="">Social</a></li>
