--- a/products.html
+++ b/products.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-
 	scale=1.0">
-	<title>All Products - Taym</title>
-	<link rel="stylesheet" href="style.css">
+	<title>TaymStore</title>
+	<link rel="stylesheet" href="https://danielpulido01.github.io/primeraPagina/style.css">
 	
 	<!Para linkearle fuentes para escribir>
 	<link href="https://fonts.googleapis.com/css2?
@@ -16,29 +16,28 @@
 	<!Para linkearle los iconos de estrellas del rating>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-
 	awesome/4.7.0/css/font-awesome.min.css">
+	
+	<script
+	  src="https://code.jquery.com/jquery-3.6.0.min.js"
+	  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+	  crossorigin="anonymous">
+	</script>
+	
+	<script>
+		$(function(){
+			$('#footer').load('https://danielpulido01.github.io/primeraPagina/footer.html');
+		})
+		
+		$(function(){
+			$('#headerBar').load('https://danielpulido01.github.io/primeraPagina/header.html');
+		})
+	</script>
 </head>
 
 <body>
 	
 	<div class="container">
-		
-		<div class="navbar">
-			<div class="logo">
-				<img src="images/logo.png" width="125px">
-			</div>
-			<nav>
-				<ul id="MenuItems">
-					<li><a href="">Home</a></li>
-					<li><a href="">Products</a></li>
-					<li><a href="">About</a></li>
-					<li><a href="">Social</a></li>
-					<li><a href="">Account</a></li>
-				</ul>
-			</nav>
-			<img src="images/cart.png" width="30px" height="30px">
-			<img src="images/menu.png" class="menu-icon" 
-			onclick="menutoggle()">
-		</div>
+		<div id="headerBar"></div>
 	</div>
 	
 	<div class="small-container">
@@ -56,7 +55,7 @@
 		
 		<div class="row">
 			<div class="col-4">
-				<img src="images/product-1.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-1.jpg" alt="">
 				<h4>Nave principal</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -72,7 +71,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-2.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-2.jpg" alt="">
 				<h4>Nave cara</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -88,7 +87,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-3.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-3.jpg" alt="">
 				<h4>Nave media</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -104,7 +103,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-4.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-4.jpg" alt="">
 				<h4>Nave barata</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -121,7 +120,7 @@
 		</div>
 		<div class="row">
 			<div class="col-4">
-				<img src="images/product-5.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-5.jpg" alt="">
 				<h4>Hoyo principal</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -137,7 +136,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-6.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-6.jpg" alt="">
 				<h4>Hoyo cara</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -153,7 +152,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-7.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-7.jpg" alt="">
 				<h4>Hoyo media</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -169,7 +168,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-8.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-8.jpg" alt="">
 				<h4>Hoyo barata</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -186,7 +185,7 @@
 		</div>
 		<div class="row">
 			<div class="col-4">
-				<img src="images/product-9.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-9.jpg" alt="">
 				<h4>Hoyo principal</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -202,7 +201,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-10.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-10.jpg" alt="">
 				<h4>Hoyo cara</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -218,7 +217,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-11.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-11.jpg" alt="">
 				<h4>Hoyo media</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -234,7 +233,7 @@
 			</div>
 			
 			<div class="col-4">
-				<img src="images/product-12.jpg" alt="">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/product-12.jpg" alt="">
 				<h4>Hoyo barata</h4>
 				<div class="rating">
 					<i class="fa fa-star"></i>
@@ -261,44 +260,7 @@
 	</div>
 	
 	<!-------------footer------------->
-	<div class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="footer-col-1">
-					<h3>Download Our App</h3>
-					<p>Download App for Android and IOs mobile phone</p>
-					<div class="app-logo">
-						<img src="images/play-store.png">
-						<img src="images/app-store.png">
-					</div>
-				</div>
-				<div class="footer-col-2">
-					<img src="images/logo-white.png">
-					<p>Our purpose is to sustainably hablada de paja xxxx gola soy daniel</p>
-				</div>
-				<div class="footer-col-3">
-					<h3>Useful Links</h3>
-					<ul>
-						<li>Coupons</li>
-						<li>Blog Post</li>
-						<li>Return Policy</li>
-						<li>Join Affiliate</li>
-					</ul>
-				</div>
-				<div class="footer-col-4">
-					<h3>Follow us</h3>
-					<ul>
-						<li>Instagram</li>
-						<li>TikTok</li>
-						<li>Twitter</li>
-						<li>Facebook</li>
-					</ul>
-				</div>
-			</div>
-			<hr>
-			<p class="copyright">Copyright 2020 - TaymStore</p>
-		</div>
-	</div>
+	<div id="footer"></div>
 	
 	<!Toggle menu>
 	<script>
