--- a/header.html
+++ b/header.html
@@ -1,19 +1,20 @@
+	
 <div class="navbar">
-				<div class="logo">
-					<img src="Images/logo.png" width="125px">
-				</div>
-				<nav>
-					<ul id="MenuItems">
-						<li><a href="https://danielpulido01.github.io/primeraPagina/index.html">Homo</a></li>
-						<li><a href="https://danielpulido01.github.io/primeraPagina/products.html">Products</a></li>
-						<li><a href="">About</a></li>
-						<li><a href="">Social</a></li>
-						<li><a href="">Account</a></li>
-					</ul>
-				</nav>
-				<img src="https://danielpulido01.github.io/primeraPagina/Images/cart.png" width="30px" height="30px">
-				<img src="https://danielpulido01.github.io/primeraPagina/Images/menu.png" 
-				class="menu-icon" onclick="menutogle()">
+	<div class="logo">
+		<img src="Images/logo.png" width="125px">
+	</div>
+	<nav>
+		<ul id="MenuItems">
+			<li><a href="https://danielpulido01.github.io/primeraPagina/index.html">Home</a></li>
+			<li><a href="https://danielpulido01.github.io/primeraPagina/products.html">Products</a></li>
+			<li><a href="">About</a></li>
+			<li><a href="">Social</a></li>
+			<li><a href="">Account</a></li>
+		</ul>
+	</nav>
+	<img src="https://danielpulido01.github.io/primeraPagina/Images/cart.png" width="30px" height="30px">
+	<img src="https://danielpulido01.github.io/primeraPagina/Images/menu.png" 
+	class="menu-icon" onclick="menutogle()">
 </div>
 
 <!Toggle menu>
