--- a/index.html
+++ b/index.html
@@ -27,24 +27,37 @@
 		$(function(){
 			$('#footer').load('https://danielpulido01.github.io/primeraPagina/footer.html');
 		})
-		
-		$(function(){
-			$('#headerBar').load('https://danielpulido01.github.io/primeraPagina/header.html');
-		})
 	</script>
+	
+	
 </head>
 
 <body>
 	
 	<div class="header">
-
+		
 		<div class="container">
 		
-			<div id="headerBar"></div>
-			
+			<div class="navbar">
+				<div class="logo">
+					<img src="Images/logo.png" width="125px">
+				</div>
+				<nav>
+					<ul id="MenuItems">
+						<li><a href="https://danielpulido01.github.io/primeraPagina/index.html">Homo</a></li>
+						<li><a href="https://danielpulido01.github.io/primeraPagina/products.html">Products</a></li>
+						<li><a href="">About</a></li>
+						<li><a href="">Social</a></li>
+						<li><a href="">Account</a></li>
+					</ul>
+				</nav>
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/cart.png" width="30px" height="30px">
+				<img src="https://danielpulido01.github.io/primeraPagina/Images/menu.png" 
+				class="menu-icon" onclick="menutogle()">
+			</div>
 			<div class="row">
 				<div class="col-2">
-					<h1>Titulo de la pagina<br>Algo motivador</h1>
+					<h1>itulo de la pagina<br>Algo motivador</h1>
 					<p>Parrafo pequeño que quede bonito<br>Algo motivador puede ser mas largo
 					<br>y continuando lo anterior, unas <br> 3 lineas se ve decente</p>
 					<!Luego de lo que se quiere poner en el boton, se pone el codigo del boton para como quieres que se vea. Este codigo le agrega una flecha>
@@ -324,7 +337,21 @@
 	<!-------------footer------------->
 	<div id="footer"></div>
 	
-	
+	<!Toggle menu>
+	<script>
+		var MenuItems = document.getElementById("MenuItems");
+			
+		MenuItems.style.maxHeight = "0px";
+			
+		function menutoggle(){
+			if(MenuItems.style.maxHeight == "0px"){
+				MenuItems.style.maxHeight = "200px";
+			}
+			else{
+				MenuItems.style.maxHeight = "0px";
+			}
+		}		
+	</script>
 	
 </body>
 
